# animated-invention

./: .gitignore  LICENSE  README.md  my.code-workspace
control_flow/src/: main.rs
guessing_game/src/: main.rs
hello_cargo/: README.md
hello_world/: main  main.rs
roadmap-sh/: README.md
roadmap-sh/task_tracker/: CLAUDE.md  Cargo.toml  README.md  REQUIREMENTS.md  tasks.json
roadmap-sh/task_tracker/src/: main.rs
simple-http-server/: .env.example  Cargo.toml  README.md  docker-compose.yml
simple-http-server/src/: main.rs
simple-http-server/src/database/: config.rs  mod.rs  tests.rs
simple-http-server/tests/: database_integration.rs
