[package]
name = "simple-http-server"
version = "0.1.0"
edition = "2024"

[lib]
name = "simple_http_server"
path = "src/lib.rs"

[dependencies]
tokio = { version = "1.42", features = ["full"] }
axum = "0.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sqlx = { version = "0.8", features = ["postgres", "runtime-tokio-rustls", "macros", "chrono"] }
dotenv = "0.15"
